Fixed Experience overflow responsiveness, Skills responsiveness.
Added favicon and changed meta data title and description.

--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -1,6 +1,7 @@
 .Navbar {
     border-bottom: 1px solid black;
     background-image: linear-gradient(to bottom right, #6CAFCC, #7EADC2);
+    padding: 0% 10%;
 }
 
 .Navbar ul {
